src/objects/Clinical_Doctor_Inventory__c.object
<CustomObject>
    <fields>
        <fullName>Calendar_Date__c</fullName>
        <label>Calendar Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Center_Information__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Center Information</label>
        <referenceTo>Center_Information__c</referenceTo>
        <relationshipLabel>Clinical Doctor Inventory</relationshipLabel>
        <relationshipName>Clinical_Doctor_Inventory</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DOW__c</fullName>
        <label>DOW</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>End_Hour_Int__c</fullName>
        <formula>value( End_Hour__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>End Hour Int</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>End_Hour__c</fullName>
        <label>End Hour</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Minute_Int__c</fullName>
        <formula>value( End_Minute__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>End Minute Int</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>End_Minute__c</fullName>
        <label>End Minute</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Etime__c</fullName>
        <formula>(value( End_Hour__c ) * 60) + value( End_Minute__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Etime</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Start_Hour_Int__c</fullName>
        <formula>value( Start_Hour__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Start Hour Int</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Start_Hour__c</fullName>
        <label>Start Hour</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Minute_Int__c</fullName>
        <formula>value( Start_Minute__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Start Minute Int</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Start_Minute__c</fullName>
        <label>Start Minute</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stime__c</fullName>
        <formula>(value( Start_Hour__c) * 60) + value( Start_Minute__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Stime</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Link to the doctor</description>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Clinical_Doctor_Inventory</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Clinical Doctor Inventory</label>
    <nameField>
        <displayFormat>CDI-{0000}</displayFormat>
        <label>Clinical Doctor Inventory Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Clinical Doctor Inventory</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>